# Myx

./: .gitignore  Cargo.toml  NOTICE  README.md  build.rs  dist-workspace.toml
.github/workflows/: release.yml
examples/: dump_theme.rs  libcheck.rs  probe.rs  radiocheck.rs  theme_demo.rs
src/: anim.rs  color.rs  components.rs  cover.rs  gradient.rs  lib.rs  main.rs  reactive.rs  theme.rs  webapi.rs
src/audio/: mod.rs  visualizer.rs
src/engine/: auth.rs  mod.rs
